# rmo

./: CMakeLists.txt  README.md  build.sh  flake.nix  lint.sh
src/: hello_socket.c  hello_socket.h  http_client.c  http_client.h  main.c
src/dns_lookup/: dns_lookup.c  dns_lookup.h
src/http_request/: http_request.c  http_request.h
